--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,60 @@
+*{
+	padding: 0;
+	margin: 0;
+}
+
 body{
-	font-size: 18px;
-	background-color: lightblue;
+	font-size: 19px;
+}
+
+div.container{
+	width: 80%;
+	margin: 50px auto;
+
+}
+h1,h2,h3,h4,h5,h6{
+	font-weight: normal;
+}
+h1{
+	font-size: 130%;
+	text-align: left;
+
+	padding-bottom: 10px;
+}
+header{
+	background-color: #;
+}
+nav{
+	background-color: #eee;
+	padding: 5px;
+}
+nav a{
+	text-decoration: none;
+	color: #444;
+}
+nav ul{
+	list-style-type: none;
+}
+nav ul li{
+	display: inline-block;
+	margin-right: 10px;
+}
+
+.row{
+	padding: 10px;
+	line-height: 1.2em;
+	border: 1px solid #e0e0e0;
+}
+.row h3{
+	border-bottom: 1px solid #e3e3e3;
+	width: 40%;
+	margin-bottom: 20px;
+}
+
+footer{
+	text-align: center;
+	padding-top: 20px;
+	border-left: 1px solid #e3e3e3;
+	border-bottom: 1px solid #e3e3e3;
+	border-right: 1px solid #e3e3e3;
 }
