--- a/styles/style.css
+++ b/styles/style.css
@@ -1,52 +1,100 @@
 *{
 	padding: 0;
 	margin: 0;
+	box-sizing: border-box;
 }
+
+/* button color #E3695F*/
+
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
+.clearfix { display: inline-block; }
+/* start commented backslash hack \*/
+* html .clearfix { height: 1%; }
+.clearfix { display: block; }
+/* close commented backslash hack */
+
 
 body{
 	font-size: 19px;
+	background-color: #EBEBEB;
+	font-family: 'Catamaran', sans-serif;
 }
 
 div.container{
-	width: 80%;
-	margin: 50px auto;
-
+	background-color: #fff;
+	width: 90%;
+	margin: 0px auto;
 }
+
 h1,h2,h3,h4,h5,h6{
 	font-weight: normal;
+	vertical-align: middle;
 }
+
 h1{
 	font-size: 130%;
 	text-align: left;
+	/*padding-bottom: 10px;*/
+}
 
-	padding-bottom: 10px;
-}
 header{
-	background-color: #;
+	background-color:#424F5A ;
+	color: #FBFBFB;
+	padding: 0.5em;
+
 }
+
 nav{
-	background-color: #eee;
-	padding: 5px;
+	background-color: ;
+	box-sizing: border-box;
 }
-nav a{
+
+nav li a{
 	text-decoration: none;
-	color: #444;
+	color: #424F5A;	
+	display: inline-block;
+	padding: 6px;
+	display: table-cell; 
+   	vertical-align: middle;
+   	transition:  background-color 0.5s;
+   	border-bottom: 1px solid transparent;
 }
+
+nav li a:hover{
+	/*border-bottom: 4px solid #FF9500;*/
+	background-color: #EBEBEB;
+	border-bottom: 1px solid #E3695F;
+}
+
 nav ul{
 	list-style-type: none;
+	padding: 0;
+    margin: 0;
+    overflow: hidden;
 }
+
 nav ul li{
-	display: inline-block;
-	margin-right: 10px;
+	float: left;
 }
 
 .row{
-	padding: 10px;
-	line-height: 1.2em;
-	border: 1px solid #e0e0e0;
+	padding: 30px 10px 10px 10px;
+	line-height: 1.4em;
+	width: 95%;
+	margin: auto;
+	letter-spacing: .05em;
+	/*border: 1px solid #e0e0e0;*/
 }
+
 .row h3{
-	border-bottom: 1px solid #e3e3e3;
+	/*border-bottom: 1px solid #e3e3e3;*/
 	width: 40%;
 	margin-bottom: 20px;
 }
